// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render breadcrumbs with one element 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    title="My Project"
  />
  <QualifierIcon
    className="spacer-right"
    qualifier="TRK"
  />
  <span
    className="navbar-context-header-breadcrumb-link"
    title="My Project"
  >
    My Project
  </span>
</header>
`;

exports[`should render alm links 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
    title="My Project"
  />
  <OrganizationAvatar
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  />
  <OrganizationLink
    className="navbar-context-header-breadcrumb-link link-base-color link-no-underline spacer-left"
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  >
    The Foo Organization
  </OrganizationLink>
  <span
    className="slash-separator"
  />
  <QualifierIcon
    className="spacer-right"
    qualifier="TRK"
  />
  <span
    className="navbar-context-header-breadcrumb-link"
    title="My Project"
  >
    My Project
  </span>
  <a
    className="link-no-underline"
    href="https://bitbucket.org/foo"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="bitbucket"
      className="text-text-top spacer-left"
      height={16}
      src="/images/sonarcloud/bitbucket.svg"
      width={16}
    />
  </a>
</header>
`;

exports[`should render organization 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
    title="My Project"
  />
  <OrganizationAvatar
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  />
  <OrganizationLink
    className="navbar-context-header-breadcrumb-link link-base-color link-no-underline spacer-left"
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  >
    The Foo Organization
  </OrganizationLink>
  <span
    className="slash-separator"
  />
  <QualifierIcon
    className="spacer-right"
    qualifier="TRK"
  />
  <span
    className="navbar-context-header-breadcrumb-link"
    title="My Project"
  >
    My Project
  </span>
</header>
`;
